# data_modeling_with_apache_cassandra

./: .gitignore  Project_1B_ Project.ipynb  README.md  pyproject.toml  requirements.txt
data/preprocessed_data/: event_datafile_new.csv
event_data/: 2018-11-01-events.csv  2018-11-02-events.csv  2018-11-03-events.csv  2018-11-04-events.csv  2018-11-05-events.csv  2018-11-06-events.csv  2018-11-07-events.csv  2018-11-08-events.csv  2018-11-09-events.csv  2018-11-10-events.csv  2018-11-11-events.csv  2018-11-12-events.csv  2018-11-13-events.csv  2018-11-14-events.csv  2018-11-15-events.csv  2018-11-16-events.csv  2018-11-17-events.csv  2018-11-18-events.csv  2018-11-19-events.csv  2018-11-20-events.csv  2018-11-21-events.csv  2018-11-22-events.csv  2018-11-23-events.csv  2018-11-24-events.csv  2018-11-25-events.csv  2018-11-26-events.csv  2018-11-27-events.csv  2018-11-28-events.csv  2018-11-29-events.csv  2018-11-30-events.csv
notebooks/: Project_1B.ipynb
src/: preprocessing.py
