[tool.poetry]
name = "data-modeling-with-apache-cassandra"
version = "0.1.0"
description = "Project in Course of Udacity's Nano-Degree Program 'Data Engineering with AWS'"
authors = ["Caspar Heidbrink <37964284+DecisioNaut@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_modeling_with_apache_cassandra"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
