[tool.poetry]
name = "data-modeling-with-apache-cassandra"
version = "0.1.0"
description = "Project in Course of Udacity's Nano-Degree Program 'Data Engineering with AWS'"
authors = ["Caspar Heidbrink <37964284+DecisioNaut@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
cassandra-driver = "^3.25.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
